WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16802
[GTK] Missing gtk properties
https://bugs.webkit.org/show_bug.cgi?id=16802
Summary
[GTK] Missing gtk properties
Luca Bruno
Reported
2008-01-09 04:56:56 PST
Hello, currently both the gtk view and frame are missing properties such as editable, uri, etc.. Even the API is not completely stabilized i think it's good to complete the current one at least by adding gtk properties.
Attachments
add properties for actual private data
(9.53 KB, patch)
2008-01-09 04:58 PST
,
Luca Bruno
no flags
Details
Formatted Diff
Diff
fix changelog
(9.68 KB, patch)
2008-01-09 05:02 PST
,
Luca Bruno
alp
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Luca Bruno
Comment 1
2008-01-09 04:58:24 PST
Created
attachment 18348
[details]
add properties for actual private data
Luca Bruno
Comment 2
2008-01-09 05:02:07 PST
Created
attachment 18349
[details]
fix changelog
Alp Toker
Comment 3
2008-01-09 12:26:27 PST
Comment on
attachment 18349
[details]
fix changelog r=me Please be careful with whitespace next time.
Alp Toker
Comment 4
2008-01-09 12:27:04 PST
Landed in
r29341
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug