2008-01-09  Luca Bruno  <lethalman88@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16802
        [GTK] Missing gtk properties

        Add missing properties to WebKitViewFrame and WebKitWebView.

        * WebView/webkitprivate.h: add some useful defines for param specs
        * WebView/webkitwebframe.cpp:
        (webkit_web_frame_get_property): added
        (webkit_web_frame_class_init): add name, title and uri read-only properties
        * WebView/webkitwebview.cpp:
        (webkit_web_view_get_property): add editable property read
        (webkit_web_view_set_property): added for editable property write
        (webkit_web_view_class_init): add read-write editable property


Canonical link: https://commits.webkit.org/23174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29341 268f45cc-cd09-0410-ab3c-d52691b4dbfc